--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,8 @@
 
 # Data
 downloads/
-experiments/
-data/
+experiments
+data
 
 # Jupyter Notebook
 *.ipynb_checkpoints
@@ -24,6 +24,12 @@ data/
 venv/
 ENV/
 
-# RL
-rl/summary/*
-rl/models/*
+# RL folders
+model/rl/summary/*
+model/rl/models/*
+
+# Caches
+*.swp
+__pycache__/*
+
+.idea/*
